# alsania-blockchain

./: # Alsania Blockchain.md  # Code Citations.md  .gitconfig  .gitignore  Alsania.py  AlsaniaGo.go  AlsaniaWallet.html  Alsaniatest.py  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  alsania_blockchain.py  alsania_coin.py  alsania_main.py  alsaniablockchain.py  blockchain1.py  consensus.py  external_oracle.py  main.py  node_server.py  requirements.txt  setup.py  testnet-setup.md  whitepaper
AlsaniaBlockchain/: # Alsania Blockchain.md  # Compliance and Security.md  Cargo.toml  LICENSE  README.md  fn main() {.rs  hardhat.config.js  module.js  package.json  pragma solidity ^0.8.java  readme.md  readme.txt
AlsaniaBlockchain/.cargo/: config
AlsaniaBlockchain/ai-training/: # Decentralized AI Training.md  Cargo.toml
AlsaniaBlockchain/ai-training/src/: lib.rs
AlsaniaBlockchain/compliance/: Cargo.toml
AlsaniaBlockchain/compliance/src/: lib.rs
AlsaniaBlockchain/core/: Cargo.toml
AlsaniaBlockchain/cross-chain-bridge/: Cargo.toml
AlsaniaBlockchain/cross-chain-bridge/src/: lib.rs
AlsaniaBlockchain/ethereum/: Cargo.toml
AlsaniaBlockchain/ethereum/src/: lib.rs
AlsaniaBlockchain/evm/: Cargo.toml
AlsaniaBlockchain/filecoin/: Cargo.toml
AlsaniaBlockchain/frontend/: package.json
AlsaniaBlockchain/ipfs/: Cargo.toml
AlsaniaBlockchain/polkadot/: Cargo.toml
AlsaniaBlockchain/runtime/: Cargo.toml
AlsaniaBlockchain/smart-contracts/: ALSC.sol  Staking.sol
AlsaniaBlockchain/src/: ai_training_framework.rs  cross_chain_bridges.rs  decentralized_storage.rs  evm_compatibility.rs  lattice_based_cryptography.rs  lib.rs  main.rs  pos.rs  smart_contracts.rs  storage.rs  zero_knowledge_kyc.rs  zk_rollups.rs
AlsaniaBlockchain/zk-rollups/: Cargo.toml
ai-training/: Cargo.toml  (+1 more)
(+72 files in other folders)
