[package]
name = "alsania_blockchain"
version = "0.1.0"
edition = "2018"

[dependencies]
substrate = "3.0"
libp2p = "0.34"
dilithium = { git = "https://github.com/PQClean/PQClean.git", package = "dilithium3" }
crystals-dilithium = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evm = "0.1"
zk-rollups = "0.1"
cross-chain-bridge = "0.1"
ai-training = "0.1"
compliance = "0.1"

[workspace]
members = [
    ".",
    "runtime",
    "evm",
    "zk-rollups",
    "cross-chain-bridge",
    "ai-training",
    "compliance",
]
